--- a/WebApp - Transportbedrijf/Pages/Shared/_Layout.cshtml
+++ b/WebApp - Transportbedrijf/Pages/Shared/_Layout.cshtml
@@ -23,8 +23,15 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Vehicle/List">Alle voertuigen</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Vehicle/AddTaxi">Taxi toevoegen</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Vehicle/AddTruck">Vrachtwagen toevoegen</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
