Core.Domain opgesplitst naar TransporT.Shared en TransporT.Services ivm opnieuw probleem met dependencies. Mappers gemaakt.

--- a/WebApp - Transportbedrijf/Pages/Shared/_Layout.cshtml
+++ b/WebApp - Transportbedrijf/Pages/Shared/_Layout.cshtml
@@ -23,13 +23,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Vehicle/List">Alle voertuigen</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/VehiclePages/List">Alle voertuigen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Vehicle/AddTaxi">Taxi toevoegen</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/VehiclePages/AddTaxi">Taxi toevoegen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Vehicle/AddTruck">Vrachtwagen toevoegen</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/VehiclePages/AddTruck">Vrachtwagen toevoegen</a>
                         </li>
 
                     </ul>
